    Inkscape or Firefox/GTK+3).

  [Added]
  - EWMH fullscreen hint honoured when windows are being mapped (instead
    of only responding to ClientMessages asking for fullscreen mode
    *after* the window has been mapped).
  - ICCCM size hints (increments, aspect ratio, min/max size) are now
    being honoured by floating windows.
  - Initial workspaces can be configured in config.h.

  [Changed]
  - y offset and height taken into account when sorting monitors, the
    same way lemonbar sorts monitors.

v16.01  2016-01-08
  [Fixed]
  - A bar will now be notified when a different monitor has been
    selected.

  [Changed]
  - When floating clients are larger than the work area, we try to make
    the upper left corner visible.
  - Reworked theme "modern".
  - Maintainers: The Makefile is now located in "src/".
  - "state_to_lemonbar.sh" has been replaced with a more portable tool
    written in C.
  - Theming:
    - No need for ImageMagick anymore.
    - Minor file name changes, incompatible though.

  [Added]
  - Bar info tool:
    - Workspaces can be suffixed.
    - Current monitor indicated by styling the layout icon differently.
  - Set class hint "Katriawm/decoration" on decoration windows, so tools
    like compton can ignore them.
  - ICCCM size hints: Requests for a fixed size are being honoured.

Milestone 3  2016-01-03
  [Fixed]
  - Critical: Fix "use after free" when a client terminates or unmaps.
  - More robust against nonsensical data received from the IPC client.
    In other words: Added various out-of-bounds checks.
  - Fix focus issues with suckless tabbed after changing workspaces or
    monitors.

  [Changed]
  - On startup, the pointer is now warped to the selected monitor.
  - DestroyNotify events are now ignored.
  - We now always unmap windows on UnmapNotify as suggested by ICCCM.
  - Refuse to switch workspace or monitor if it's already selected.
  - The number of available save slots has been reduced to eight.

  [Added]